--- a/public/programs.html
+++ b/public/programs.html
@@ -88,7 +88,8 @@
         })
       }).then((r) => r.json()).then((r) => {
         console.log(r);
-        alert('done!')
+        ['startsAt', 'endsAt'].map(i => $(i).value = '');
+        alert('done!');
       }).catch((e) => {
         console.error(e);
         alert(e);
@@ -97,8 +98,8 @@
 
     (async () => {
       const channels = await fetch('/api/channels').then(r => r.json());
-      const programs = await fetch('/api/programs?days=7').then(r => r.json())
-      const scheduledEvents = await fetch('/api/scheduled_events?days=7').then(r => r.json());
+      const programs = await fetch('/api/programs?days=10').then(r => r.json())
+      const scheduledEvents = await fetch('/api/scheduled_events?days=10').then(r => r.json());
       programs.sort((a, b) => (a.startsAt - b.startsAt) || (a.endsAt - b.endsAt)).forEach((row) => {
         const groupKey = row.serviceId;
         if (!programsGroupedByServiceId.has(groupKey)) programsGroupedByServiceId.set(groupKey, []);
