--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
         socketio.emit('transcoder', 'stop');
       });
       document.querySelector('#btn-reloadch').addEventListener('click', () => {
-        socketio.emit('transcoder', 'reloadch');
+        socketio.emit('reloadch');
       });
     </script>
 </body>
